@@ -67,7 +67,7 @@ public class FileCloseAction extends AbstractAction {
     
     public FileCloseAction(TabbedView parent) {
         //putValue(Action.NAME, "Close");
-    	putValue(Action.NAME, Messages.getMessage("File.Close"));	
+        putValue(Action.NAME, Messages.getMessage("File.Close"));
         putValue(Action.ACCELERATOR_KEY,KeyStroke.getKeyStroke("ctrl W"));
         putValue(Action.MNEMONIC_KEY, new Integer(KeyStroke.getKeyStroke("C").getKeyCode()));
         m_view = parent;
